{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 14,
  "lineage": "0666c9c8-d06e-594b-08cb-1b9317ea37ca",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dc_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/networkInterfaces/DCNIC",
            "internal_domain_name_suffix": "nufgruct1poehd4x0vsn5csvkg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "DCIPConfig",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/publicIPAddresses/DCPublicIP",
                "subnet_id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/virtualNetworks/ADVirtualNetwork/subnets/ADSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-0D-3A-57-7C-0F",
            "name": "DCNIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "ADResourceGroup",
            "virtual_machine_id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Compute/virtualMachines/DomainController"
          },
          "dependencies": [
            "azurerm_public_ip.dc_public_ip",
            "azurerm_resource_group.ad_rg",
            "azurerm_subnet.ad_subnet",
            "azurerm_virtual_network.ad_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "dc_nic_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/networkInterfaces/DCNIC|/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/networkSecurityGroups/ADNSG",
            "network_interface_id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/networkInterfaces/DCNIC",
            "network_security_group_id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/networkSecurityGroups/ADNSG"
          },
          "dependencies": [
            "azurerm_network_interface.dc_nic",
            "azurerm_network_security_group.ad_nsg",
            "azurerm_public_ip.dc_public_ip",
            "azurerm_resource_group.ad_rg",
            "azurerm_subnet.ad_subnet",
            "azurerm_virtual_network.ad_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ad_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/networkSecurityGroups/ADNSG",
            "location": "eastus",
            "name": "ADNSG",
            "resource_group_name": "ADResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDP",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.ad_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/networkSecurityGroups/ADNSG/securityRules/AllowRDP",
            "name": "AllowRDP",
            "network_security_group_name": "ADNSG",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "ADResourceGroup",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ad_nsg",
            "azurerm_resource_group.ad_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dc_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/publicIPAddresses/DCPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "74.235.213.83",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "DCPublicIP",
            "resource_group_name": "ADResourceGroup",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.ad_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ad_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/virtualNetworks/ADVirtualNetwork/subnets/ADSubnet",
            "name": "ADSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ADResourceGroup",
            "virtual_network_name": "ADVirtualNetwork"
          },
          "dependencies": [
            "azurerm_resource_group.ad_rg",
            "azurerm_virtual_network.ad_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "ad_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d0680a6d-db53-43dc-8fd7-d564df8a5556",
            "id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/virtualNetworks/ADVirtualNetwork",
            "location": "eastus",
            "name": "ADVirtualNetwork",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "ADResourceGroup",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f85082ec-ff83-4a8b-961c-04c6aae872a9/resourceGroups/ADResourceGroup/providers/Microsoft.Network/virtualNetworks/ADVirtualNetwork/subnets/ADSubnet",
                "name": "ADSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.ad_rg"
          ]
        }
      ]
    }
  ]
}